--- a/_posts/2013-10-26-Margit.md
+++ b/_posts/2013-10-26-Margit.md
@@ -10,6 +10,8 @@ author: Samuel Sáez
 
 **Margit, el Augurio Caído** es uno de los primeros jefes principales que el jugador encuentra en *Elden Ring*. Actúa como guardián del Castillo Velo Tormentoso y supone un importante desafío para los Tiznados novatos.
 
+![Margit](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/margit.png)
+
 ---
 
 ## 🗡️ Introducción
