--- a/_posts/2013-10-03-Rennala.md
+++ b/_posts/2013-10-03-Rennala.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Boss:Godrick el Injertado
-description: "Godrick el Injertado"
+title: Boss:Rennala, Queen of the Full Moon
+description: "Rennala, Queen of the Full Moon"
 tags: [sample post]
 author: Samuel Sáez
 ---
@@ -46,6 +46,7 @@ Cuando pierde la mitad de su vida, Godrick injerta **la cabeza de un dragón** e
 - Un ataque final donde barre todo el campo con una columna de llamas.
 
 ![Godrick Fase 2](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-2.png)
+
 ---
 
 ## 💡 Consejos para derrotarlo
