Creacion de capturas y arreglo de archivos

--- a/_posts/2013-10-03-Rennala.md
+++ b/_posts/2013-10-03-Rennala.md
@@ -6,90 +6,103 @@ tags: [sample post]
 author: Samuel Sáez
 ---
 
-# Godrick el Injertado
+# Rennala, Queen of the Full Moon
 
-**Godrick el Injertado** es uno de los primeros semidioses que el jugador enfrenta en *Elden Ring*. Señor del Castillo Velo Tormentoso, es conocido por su obsesión con el poder y por su grotesca práctica de injertar extremidades ajenas en su propio cuerpo.
+**Rennala, Reina de la Luna Llena**, es la líder de la Academia de Raya Lucaria y uno de los combates más singulares de *Elden Ring*. A diferencia de otros semidioses, su historia está marcada por la tragedia, la pérdida y la obsesión por la erudición arcana.
 
-![Godrick Fase 1](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-1.png)
-
----
-
-## 🗡️ Introducción
-
-Godrick es el primer gran portador de una **Runa Mayor** que el jugador puede obtener. Su combate es un caos de ataques amplios, fuerza bruta y movimientos impredecibles, lo que lo convierte en una prueba significativa para quienes comienzan su aventura.
+![Rennala](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Rennala.png)
 
 ---
 
-## 🧬 Historia y trasfondo
+## 🌙 Introducción
 
-Godrick pertenece a la **dinastía dorada** y es un descendiente lejano de la Reina Márika. Sin embargo, su linaje debilitado lo ha llevado a sentirse inseguro y a intentar compensarlo mediante el injerto de poder literal: brazos, piernas y torsos de guerreros y criaturas.
+Rennala es uno de los grandes jefes principales que el jugador debe derrotar para avanzar en la historia. Su batalla destaca no por su agresividad, sino por su atmósfera mística, su magia lunar y la estética inolvidable del salón de la Academia.
 
-A pesar de su título, Godrick es considerado por muchos NPCs del juego como un líder débil, casi patético. Su crueldad y necesidad de demostrar poder lo han convertido en una figura temida dentro del castillo.
+---
+
+## 📖 Historia y trasfondo
+
+Rennala fue la antigua líder de los **Carianos**, una familia real con fuerte dominio de la hechicería. Contrajo matrimonio con **Radagon**, quien posteriormente la abandonó para convertirse en consorte de la Reina Márika. Esta traición quebró su espíritu.
+
+Tras su abandono, Rennala se refugió en Raya Lucaria, protegiendo el **Ámbar Real**, que contenía los conocimientos de la Luna Llena. Sin Radagon y sin su papel como reina, terminó refugiada en un estado casi ilusorio, rodeada de pupilos deformes que cantan plegarias.
+
+Aunque su poder está debilitado, el jugador no la mata: Rennala **sobrevive** tras el combate y permite al Tiznado **reasignar sus atributos**, convirtiéndose en un personaje clave para progresar y adaptar builds.
 
 ---
 
 ## ⚔️ Estilo de combate
 
-El combate contra Godrick se desarrolla en dos fases muy distintas:
+El combate contra Rennala tiene dos fases completamente distintas:
 
-### **Fase 1**
-- Usa un hacha gigante con ataques amplios.
-- Tiene múltiples combos que mezclan barridos y golpes verticales.
-- Puede crear ráfagas de viento que aumentan el alcance de sus ataques.
-- Ejecuta saltos aplastantes que castigan rodar demasiado tarde.
+### **Fase 1 – La Cámara Dorada**
+- Rennala flota dentro de un capullo dorado.
+- El jugador debe identificar a los **pupilos dorados** (los que emiten un aura dorada) y derrotarlos.
+- Cada pupilo destruido debilita su barrera.
+- Al romper los tres, la barrera cae y es posible atacar a Rennala.
 
-### **Fase 2 – El Dragón Injertado**
-Cuando pierde la mitad de su vida, Godrick injerta **la cabeza de un dragón** en su brazo, ganando ataques imbuidos en fuego:
-- Embestidas de fuego a corta distancia.
-- Llamaradas en abanico.
-- Golpes explosivos con el dragón.
-- Un ataque final donde barre todo el campo con una columna de llamas.
+Durante esta fase, los pupilos pueden:
+- Lanzar libros.
+- Hacer explotar llamas doradas.
+- Arrastrarse hacia el jugador para entorpecer sus movimientos.
 
-![Godrick Fase 2](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-2.png)
+### **Fase 2 – Reina de la Luna Llena**
+Rennala revela su verdadero poder, desplegando magia lunar en un amplio campo estelar:
+
+- Orbes mágicos que persiguen al jugador.
+- Grandes destellos láser de magia lunar.
+- Hechizos de gravedad.
+- Invocaciones temporales de lobos, trolls, caballeros o incluso un dragón (desaparecen al recibir daño).
+
+La segunda fase es elegante, peligrosa y muy dependiente del manejo de la distancia.
 
 ---
 
-## 💡 Consejos para derrotarlo
+## 💡 Consejos para derrotarla
 
-- **Mantén la calma en sus combos largos**: muchos jugadores esquivan demasiado pronto.
-- Rodar **hacia la izquierda** suele ser más seguro en fase 1.
-- En fase 2, evita colocarte delante del dragón: busca su costado.
-- Invoca a **Nepheli Loux**, una aliada muy eficaz contra él.
-- Los espíritus con buena resistencia, como los **Soldados Godrick**, pueden distraerlo.
-- Las armas con **sangrado** o **daño eléctrico** funcionan especialmente bien.
+### Fase 1
+- Ignora a los pupilos comunes: céntrate solo en los que **brillan en dorado**.
+- Aprovecha para hacer **gran daño** cuando Rennala cae al suelo.
+- Si puedes, usa ataques cargados o golpes fuertes para maximizar el daño en su breve vulnerabilidad.
+
+### Fase 2
+- Las **invocaciones** pueden distraer mucho; elimina primero a las más peligrosas (como los lobos).
+- Muévete lateralmente para evitar su rayo lunar.
+- Rennala tiene poca defensa física: armas rápidas o ataques de salto funcionan muy bien.
+- La magia pura es menos eficaz, pero hechizos de gravedad o hielo funcionan mejor que los arcanos estándar.
 
 ---
 
 ## 🏆 Recompensas
 
-Al derrotarlo obtienes:
+Al finalizar el combate obtendrás:
 
-- **Runa Mayor de Godrick**, que aumenta todos tus atributos.
-- **Recuerdo del Injertado**, que puede canjearse por:
-  - El hacha de Godrick.
-  - El dragón puño (arma especial).
-- Acceso al siguiente tramo del viaje hacia Liurnia.
+- **Runa Mayor de Rennala**, que permite *respeccar* atributos hablando con ella.
+- **Recuerdo de la Reina de la Luna Llena**, que permite obtener:
+  - El hechizo *Luna Llena de Rennala*.
+  - El cetro de la Reina de la Luna Llena.
+- Acceso total a la zona alta de la Academia de Raya Lucaria.
 
 ---
 
 ## 🎨 Apariencia
 
-Godrick es una amalgama de cuerpos. Su torso está lleno de brazos y piernas injertados, algunos útiles, otros simplemente ornamentales. Usa una armadura dorada desgastada y un hacha gigante de diseño irregular.
-
-En su segunda fase, la cabeza de dragón suelta fuego desde su brazo derecho, creando un contraste monstruoso entre carne, metal y llamas.
+- En la primera fase, Rennala permanece dentro de un capullo dorado, rodeada de pupilos que cantan.
+- En la segunda fase, flota en un campo estelar, irradiando luz lunar.
+- Sus hechizos y su vestimenta reflejan la estética cariana: azul profundo, plata etérea y motivos lunares.
 
 ---
 
-## 📜 Curiosidades
+## ⭐ Curiosidades
 
-- Muchos NPCs lo desprecian, especialmente Kenneth Haight y Nepheli Loux.
-- Su debilidad y crueldad son temas recurrentes: incluso sus propios soldados lo temen.
-- Es uno de los jefes que más claramente representa el concepto de “poder corrupto” del juego.
+- Rennala no muere: sigue viva en la Gran Biblioteca, acompañada de un pequeño espíritu infantil.
+- Es la madre de **Ranni**, **Radahn** y **Rykard**.
+- Su batalla tiene claras referencias visuales a *Bloodborne*, especialmente a la lucha contra Rom.
+- Es uno de los pocos jefes cuyo combate se centra más en la **mecánica** que en la agresión.
 
 ---
 
 ## 📘 Conclusión
 
-Godrick el Injertado es un combate espectacular que combina caos, agresividad y una puesta en escena inolvidable. Vencerlo significa reclamar la primera Runa Mayor y avanzar hacia el corazón mismo de las Tierras Intermedias.
+Rennala, Reina de la Luna Llena, es un combate mágico y atmosférico que rompe con el ritmo de los demás enfrentamientos del juego. Más que una prueba de fuerza, es un duelo de inteligencia y timing, y una de las peleas más memorables de *Elden Ring*.
 
 ---
