--- a/_posts/2013-10-07-Maliketh.md
+++ b/_posts/2013-10-07-Maliketh.md
@@ -1,95 +1,131 @@
 ---
 layout: post
-title: Boss:Godrick el Injertado
-description: "Godrick el Injertado"
+title: Boss:Maliketh, la Hoja Negra
+description: "Maliketh, la Hoja Negra"
 tags: [sample post]
 author: Samuel Sáez
 ---
 
-# Godrick el Injertado
+# Maliketh, la Hoja Negra
 
-**Godrick el Injertado** es uno de los primeros semidioses que el jugador enfrenta en *Elden Ring*. Señor del Castillo Velo Tormentoso, es conocido por su obsesión con el poder y por su grotesca práctica de injertar extremidades ajenas en su propio cuerpo.
+**Maliketh, la Hoja Negra**, es uno de los jefes más importantes y difíciles de *Elden Ring*. Guardia personal de la mismísima Reina Márika, es el encargado de custodiar la **Runa de la Muerte**, un poder que ninguna criatura del mundo debería poseer.
 
-![Godrick Fase 1](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-1.png)
+Su combate es rápido, elegante y devastador, y marca uno de los puntos más altos de tensión narrativa y jugable.
+
+![Maliketh](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Maliketh.png)
 
 ---
 
 ## 🗡️ Introducción
 
-Godrick es el primer gran portador de una **Runa Mayor** que el jugador puede obtener. Su combate es un caos de ataques amplios, fuerza bruta y movimientos impredecibles, lo que lo convierte en una prueba significativa para quienes comienzan su aventura.
+Maliketh es un jefe obligatorio y aparece en la fase final del juego, en **Farum Azula**. Su pelea está dividida en dos fases: primero contra **Bestia Clérigo**, y después contra la forma verdadera de Maliketh.
+
+Ambas fases tienen estilos radicalmente distintos pero igualmente desafiantes.
 
 ---
 
-## 🧬 Historia y trasfondo
+## 📖 Historia y trasfondo
 
-Godrick pertenece a la **dinastía dorada** y es un descendiente lejano de la Reina Márika. Sin embargo, su linaje debilitado lo ha llevado a sentirse inseguro y a intentar compensarlo mediante el injerto de poder literal: brazos, piernas y torsos de guerreros y criaturas.
+Maliketh es el **medio hermano de Márika**, y uno de los seres más leales a la Orden Dorada. Fue elegido para portar la **Runa de la Muerte**, el poder capaz de matar dioses y detener la inmortalidad.
 
-A pesar de su título, Godrick es considerado por muchos NPCs del juego como un líder débil, casi patético. Su crueldad y necesidad de demostrar poder lo han convertido en una figura temida dentro del castillo.
+Por siglos la protegió, pero cometió un error fatal:
+
+- La bruja **Ranni** logró robar parte de la Runa.
+- Con ella asesinó a **Godwyn**, dando origen a los Muertos Sin Alma.
+- Este evento rompió el equilibrio del mundo y desencadenó la Guerra de la Fragmentación.
+
+Afectado por la culpa y la vergüenza, Maliketh se ocultó en la distorsionada Farum Azula. La forma de **Bestia Clérigo** es producto de su intento por controlar su carga; su verdadera forma, Maliketh, muestra su ira y dolor.
 
 ---
 
 ## ⚔️ Estilo de combate
 
-El combate contra Godrick se desarrolla en dos fases muy distintas:
+El combate consta de dos fases muy distintas:
 
-### **Fase 1**
-- Usa un hacha gigante con ataques amplios.
-- Tiene múltiples combos que mezclan barridos y golpes verticales.
-- Puede crear ráfagas de viento que aumentan el alcance de sus ataques.
-- Ejecuta saltos aplastantes que castigan rodar demasiado tarde.
+---
 
-### **Fase 2 – El Dragón Injertado**
-Cuando pierde la mitad de su vida, Godrick injerta **la cabeza de un dragón** en su brazo, ganando ataques imbuidos en fuego:
-- Embestidas de fuego a corta distancia.
-- Llamaradas en abanico.
-- Golpes explosivos con el dragón.
-- Un ataque final donde barre todo el campo con una columna de llamas.
+### **Fase 1 — Bestia Clérigo**
 
-![Godrick Fase 2](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-2.png)
+Una criatura rápida y agresiva que utiliza ataques de fuego y luz sagrada.
+
+**Ataques principales:**
+- Espadas invisibles que atraviesan distancia.
+- Lluvias de cuchillas doradas.
+- Saltos largos y embestidas.
+- Explosiones de área con tierra incandescente.
+- Golpes amplios con sus garras bestiales.
+
+Es impredecible y su movilidad complica el combate a corta distancia.
+
+---
+
+### **Fase 2 — Maliketh, the Black Blade**
+
+Cuando su vida baja a la mitad, muestra su forma real.
+
+**Cambios importantes:**
+- Mucho mayor velocidad.
+- Agresividad extrema.
+- Ataques aéreos acrobáticos.
+- Uso de la **Hoja Negra**, que aplica daño degenerativo (reduce vida máxima temporalmente).
+- Lluvias de cortes rojos imbuidos de muerte.
+
+Maliketh es considerado uno de los jefes con mejor diseño de combate de FromSoftware: hermoso, trágico y brutal.
 
 ---
 
 ## 💡 Consejos para derrotarlo
 
-- **Mantén la calma en sus combos largos**: muchos jugadores esquivan demasiado pronto.
-- Rodar **hacia la izquierda** suele ser más seguro en fase 1.
-- En fase 2, evita colocarte delante del dragón: busca su costado.
-- Invoca a **Nepheli Loux**, una aliada muy eficaz contra él.
-- Los espíritus con buena resistencia, como los **Soldados Godrick**, pueden distraerlo.
-- Las armas con **sangrado** o **daño eléctrico** funcionan especialmente bien.
+### **Consejos generales**
+- Mejora tu **Vigor**: la Hoja Negra reduce vida máxima.
+- Mantén la calma: muchos ataques tienen un retraso engañoso.
+- Usa **invocaciones rápidas** como la Lágrima Mimética o el Caballero Negro.
+
+### **Contra Bestia Clérigo**
+- Ataca tras sus saltos: queda vulnerable brevemente.
+- Mantente cerca para evitar que te castigue con proyectiles.
+
+### **Contra Maliketh**
+- Rodar **hacia él**, no hacia atrás.
+- Ataques de salto y armas rápidas funcionan bien.
+- La **congelación** y **sangrado** le afectan notablemente.
+- Si puedes, usa escudos con **alta resistencia a lo santo**.
 
 ---
 
 ## 🏆 Recompensas
 
-Al derrotarlo obtienes:
+Al derrotar a Maliketh obtienes:
 
-- **Runa Mayor de Godrick**, que aumenta todos tus atributos.
-- **Recuerdo del Injertado**, que puede canjearse por:
-  - El hacha de Godrick.
-  - El dragón puño (arma especial).
-- Acceso al siguiente tramo del viaje hacia Liurnia.
+- **Recuerdo de la Hoja Negra**, canjeable por:
+  - La espada de Maliketh.
+  - El encantamiento *Llama de la Muerte*.
+- Acceso a la **Capital Cenicienta**, fase final del juego.
+- Una enorme cantidad de runas.
 
 ---
 
 ## 🎨 Apariencia
 
-Godrick es una amalgama de cuerpos. Su torso está lleno de brazos y piernas injertados, algunos útiles, otros simplemente ornamentales. Usa una armadura dorada desgastada y un hacha gigante de diseño irregular.
-
-En su segunda fase, la cabeza de dragón suelta fuego desde su brazo derecho, creando un contraste monstruoso entre carne, metal y llamas.
+- **Bestia Clérigo**: un ser enorme, encorvado, con piel de piedra y ojos ardientes.
+- **Maliketh**: figura oscura, ágil, envuelta en harapos negros y energía roja de muerte.
+- Su capa se mueve como si fuera una criatura viva.
+- Su espada roja tiene un brillo espectral que recuerda a la Llama de la Muerte.
 
 ---
 
-## 📜 Curiosidades
+## ⭐ Curiosidades
 
-- Muchos NPCs lo desprecian, especialmente Kenneth Haight y Nepheli Loux.
-- Su debilidad y crueldad son temas recurrentes: incluso sus propios soldados lo temen.
-- Es uno de los jefes que más claramente representa el concepto de “poder corrupto” del juego.
+- Maliketh es uno de los jefes favoritos de la comunidad por su diseño artístico y jugable.
+- La música del combate cambia radicalmente entre fases para reforzar la narrativa.
+- Es uno de los pocos seres capaces de oponer resistencia total a la Runa de la Muerte.
+- Su relación con Márika es uno de los misterios más interesantes del lore.
+- Ranni es la responsable indirecta de su caída.
 
 ---
 
 ## 📘 Conclusión
 
-Godrick el Injertado es un combate espectacular que combina caos, agresividad y una puesta en escena inolvidable. Vencerlo significa reclamar la primera Runa Mayor y avanzar hacia el corazón mismo de las Tierras Intermedias.
+La pelea contra **Maliketh, la Hoja Negra**, es una culminación perfecta de habilidad, historia y emoción. Representa el peso del pecado, el deber y la destrucción del orden divino. Derrotarlo no solo abre el camino hacia el final del juego, sino que marca uno de los momentos más memorables de *Elden Ring*.
 
 ---
