--- a/_posts/2013-10-09-Radagon.md
+++ b/_posts/2013-10-09-Radagon.md
@@ -1,95 +1,102 @@
 ---
 layout: post
-title: Boss:Godrick el Injertado
-description: "Godrick el Injertado"
+title: Boss:Radagon de la Orden Áurea
+description: "Radagon de la Orden Áurea"
 tags: [sample post]
 author: Samuel Sáez
 ---
 
-# Godrick el Injertado
+# Radagon de la Orden Áurea
 
-**Godrick el Injertado** es uno de los primeros semidioses que el jugador enfrenta en *Elden Ring*. Señor del Castillo Velo Tormentoso, es conocido por su obsesión con el poder y por su grotesca práctica de injertar extremidades ajenas en su propio cuerpo.
+**Radagon** es el primer jefe final de *Elden Ring* y actúa como guardián del Trono de Elden. Es una figura central en la historia del juego, siendo a la vez el consorte de la diosa Marika y, al mismo tiempo, su propia manifestación masculina.
 
-![Godrick Fase 1](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-1.png)
+![Radagon](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Radagon.png)
 
 ---
 
 ## 🗡️ Introducción
 
-Godrick es el primer gran portador de una **Runa Mayor** que el jugador puede obtener. Su combate es un caos de ataques amplios, fuerza bruta y movimientos impredecibles, lo que lo convierte en una prueba significativa para quienes comienzan su aventura.
+Radagon es un combate que mezcla agresividad, elegancia y un fuerte componente sagrado. Su estilo de lucha gira en torno al poder de la **Orden Áurea**, usando luces doradas, armas imbuidas y ataques cargados capaces de destruir al jugador desprevenido.
+
+Esta pelea representa el clímax de la narrativa sobre el Círculo Áureo.
 
 ---
 
 ## 🧬 Historia y trasfondo
 
-Godrick pertenece a la **dinastía dorada** y es un descendiente lejano de la Reina Márika. Sin embargo, su linaje debilitado lo ha llevado a sentirse inseguro y a intentar compensarlo mediante el injerto de poder literal: brazos, piernas y torsos de guerreros y criaturas.
+Radagon es uno de los personajes más enigmáticos del lore:
 
-A pesar de su título, Godrick es considerado por muchos NPCs del juego como un líder débil, casi patético. Su crueldad y necesidad de demostrar poder lo han convertido en una figura temida dentro del castillo.
+- Fue **consorte de Rennala**, con quien tuvo a Ranni, Radahn y Rykard.
+- Más tarde se convirtió en **consorte de Marika**, pero no como un nuevo ser:  
+  **Radagon y Marika son la misma entidad**, dos aspectos divididos de una sola divinidad.
+- Como líder de la Orden Áurea, Radagon buscó imponer la perfección a través de la ley divina, aberando la voluntad del Destino.
+
+Tras la ruptura del Círculo, Radagon intentó repararlo en vano, quedando atrapado en el Trono de Elden.
 
 ---
 
 ## ⚔️ Estilo de combate
 
-El combate contra Godrick se desarrolla en dos fases muy distintas:
+Radagon pelea con una mezcla de combate físico y magia sagrada:
 
-### **Fase 1**
-- Usa un hacha gigante con ataques amplios.
-- Tiene múltiples combos que mezclan barridos y golpes verticales.
-- Puede crear ráfagas de viento que aumentan el alcance de sus ataques.
-- Ejecuta saltos aplastantes que castigan rodar demasiado tarde.
+### **Ataques principales**
+- **Teletransportes breves** para reposicionarse.
+- **Golpes con su martillo sagrado**, con retrasos que engañan al jugador.
+- **Explosiones de luz dorada** al impactar contra el suelo.
+- **Rayos de la Orden Áurea** que viajan en línea recta.
+- **Agarres sagrados** extremadamente peligrosos.
 
-### **Fase 2 – El Dragón Injertado**
-Cuando pierde la mitad de su vida, Godrick injerta **la cabeza de un dragón** en su brazo, ganando ataques imbuidos en fuego:
-- Embestidas de fuego a corta distancia.
-- Llamaradas en abanico.
-- Golpes explosivos con el dragón.
-- Un ataque final donde barre todo el campo con una columna de llamas.
-
-![Godrick Fase 2](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-2.png)
+### **Características clave**
+- La mayoría de sus ataques tienen **retardo intencional**, lo que obliga a esquivar tarde.
+- Genera **ondas expansivas** que cubren zonas amplias.
+- Su daño es casi siempre **sagrado**, no físico.
 
 ---
 
-## 💡 Consejos para derrotarlo
+## 💡 Consejos para la batalla
 
-- **Mantén la calma en sus combos largos**: muchos jugadores esquivan demasiado pronto.
-- Rodar **hacia la izquierda** suele ser más seguro en fase 1.
-- En fase 2, evita colocarte delante del dragón: busca su costado.
-- Invoca a **Nepheli Loux**, una aliada muy eficaz contra él.
-- Los espíritus con buena resistencia, como los **Soldados Godrick**, pueden distraerlo.
-- Las armas con **sangrado** o **daño eléctrico** funcionan especialmente bien.
+- Usa amuletos o armaduras con **alta resistencia sagrada**.
+- Esquiva **tarde**, casi al final de sus animaciones.
+- Mantente cerca de él: a media distancia es cuando sus rayos y ondas son más peligrosos.
+- Las invocaciones ceniza ayudan, pero pueden morir rápido por daño sagrado.
+- Armas con **sangrado o daño negro** funcionan particularmente bien.
 
 ---
 
 ## 🏆 Recompensas
 
-Al derrotarlo obtienes:
+Al derrotarlo:
 
-- **Runa Mayor de Godrick**, que aumenta todos tus atributos.
-- **Recuerdo del Injertado**, que puede canjearse por:
-  - El hacha de Godrick.
-  - El dragón puño (arma especial).
-- Acceso al siguiente tramo del viaje hacia Liurnia.
+- Desencadenas automáticamente la fase final contra la **Bestia del Círculo**.
+- Obtienes parte del logro de completar el juego.
+- Recibes una de las batallas más importantes del lore de *Elden Ring*.
 
 ---
 
 ## 🎨 Apariencia
 
-Godrick es una amalgama de cuerpos. Su torso está lleno de brazos y piernas injertados, algunos útiles, otros simplemente ornamentales. Usa una armadura dorada desgastada y un hacha gigante de diseño irregular.
+Radagon tiene un aspecto noble, solemne y casi divino:
 
-En su segunda fase, la cabeza de dragón suelta fuego desde su brazo derecho, creando un contraste monstruoso entre carne, metal y llamas.
+- Cabello rojo brillante y movimientos casi ceremoniales.
+- Un cuerpo agrietado por la radiancia dorada.
+- Sostiene un martillo mítico usado antiguamente por Marika.
+- Su piel y forma parecen “desgarrarse” bajo el peso de la ley áurea que intenta mantener.
 
 ---
 
 ## 📜 Curiosidades
 
-- Muchos NPCs lo desprecian, especialmente Kenneth Haight y Nepheli Loux.
-- Su debilidad y crueldad son temas recurrentes: incluso sus propios soldados lo temen.
-- Es uno de los jefes que más claramente representa el concepto de “poder corrupto” del juego.
+- La **cinemática inicial** muestra a Radagon intentando reparar el Círculo Áureo y fallando.
+- Su música, construida sobre el “tema sagrado” del juego, es una de las más reconocibles de la saga.
+- Radagon y Marika, siendo la misma persona, comparten modelados corporales casi idénticos.
+- Muchos ataques de Radagon son **variaciones invertidas** de movimientos de Marika.
 
 ---
 
 ## 📘 Conclusión
 
-Godrick el Injertado es un combate espectacular que combina caos, agresividad y una puesta en escena inolvidable. Vencerlo significa reclamar la primera Runa Mayor y avanzar hacia el corazón mismo de las Tierras Intermedias.
+Radagon no es solo un jefe final: es el núcleo temático de *Elden Ring*. Representa el conflicto entre orden y ruptura, la dualidad entre creación y destrucción, y el peso imposible de un destino que ni siquiera un dios puede sostener.
+
+Vencerle marca el inicio del final del ciclo y la entrada al combate definitivo del juego.
 
 ---
