--- a/_posts/2013-10-04-Morgott.md
+++ b/_posts/2013-10-04-Morgott.md
@@ -1,95 +1,102 @@
 ---
 layout: post
-title: Boss:Godrick el Injertado
-description: "Godrick el Injertado"
+title: Boss:Morgott, the Omen King
+description: "Morgott, the Omen King"
 tags: [sample post]
 author: Samuel Sáez
 ---
 
-# Godrick el Injertado
+# Morgott, the Omen King
 
-**Godrick el Injertado** es uno de los primeros semidioses que el jugador enfrenta en *Elden Ring*. Señor del Castillo Velo Tormentoso, es conocido por su obsesión con el poder y por su grotesca práctica de injertar extremidades ajenas en su propio cuerpo.
+**Morgott, el Rey de los Augurios**, es uno de los semidioses más influyentes y trágicos de *Elden Ring*. Conocido inicialmente por su identidad falsa como **Margit, el Augurio Caído**, Morgott se revela como un protector feroz del Trono de Elden, a pesar de ser repudiado por la misma orden a la que defiende.
 
-![Godrick Fase 1](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-1.png)
+![Morgott](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Morgott.png)
 
 ---
 
 ## 🗡️ Introducción
 
-Godrick es el primer gran portador de una **Runa Mayor** que el jugador puede obtener. Su combate es un caos de ataques amplios, fuerza bruta y movimientos impredecibles, lo que lo convierte en una prueba significativa para quienes comienzan su aventura.
+Morgott es un combate obligatorio y clave en la historia, situado en la cima de Leyndell. Combina velocidad, agresividad y un uso magistral de armas creadas con energía dorada. Su pelea es una versión más letal y avanzada del combate contra Margit.
+
+Es considerado por muchos jugadores como uno de los jefes más elegantes y mejor diseñados del juego.
 
 ---
 
 ## 🧬 Historia y trasfondo
 
-Godrick pertenece a la **dinastía dorada** y es un descendiente lejano de la Reina Márika. Sin embargo, su linaje debilitado lo ha llevado a sentirse inseguro y a intentar compensarlo mediante el injerto de poder literal: brazos, piernas y torsos de guerreros y criaturas.
+Morgott es un **augurio**, una casta maldita cuyos nacimientos eran vistos como impuros. Como su hermano gemelo **Mohg**, Morgott nació con cuernos y deformidades, lo que le valió rechazo y humillación desde su infancia.
 
-A pesar de su título, Godrick es considerado por muchos NPCs del juego como un líder débil, casi patético. Su crueldad y necesidad de demostrar poder lo han convertido en una figura temida dentro del castillo.
+A diferencia de Mohg, Morgott **abraza la Orden Dorada**. A pesar de ser encarcelado bajo la capital durante años, desarrolla un fanático deseo de proteger el Trono de Elden y expulsar a cualquiera que pretenda reclamarlo.
+
+Su identidad como “Margit” era una ilusión que usaba para frenar a los Tiznados y mantener el orden.
 
 ---
 
 ## ⚔️ Estilo de combate
 
-El combate contra Godrick se desarrolla en dos fases muy distintas:
+El combate de Morgott es rápido, elegante y está lleno de ataques imbuidos de luz dorada:
 
 ### **Fase 1**
-- Usa un hacha gigante con ataques amplios.
-- Tiene múltiples combos que mezclan barridos y golpes verticales.
-- Puede crear ráfagas de viento que aumentan el alcance de sus ataques.
-- Ejecuta saltos aplastantes que castigan rodar demasiado tarde.
+- Usa una espada hecha de energía dorada con combos veloces.
+- Realiza lanzamientos de cuchillas doradas a distancia.
+- Combina golpes amplios con ataques retrasados para engañar al jugador.
+- Puede invocar un martillo dorado similar al de Margit.
 
-### **Fase 2 – El Dragón Injertado**
-Cuando pierde la mitad de su vida, Godrick injerta **la cabeza de un dragón** en su brazo, ganando ataques imbuidos en fuego:
-- Embestidas de fuego a corta distancia.
-- Llamaradas en abanico.
-- Golpes explosivos con el dragón.
-- Un ataque final donde barre todo el campo con una columna de llamas.
+### **Fase 2 – Rey de los Augurios**
+Cuando su vida baja al 50%, aumenta su agresividad:
 
-![Godrick Fase 2](https://raw.githubusercontent.com/kamplen3/Wall-E/gh-pages/assets/img/Godrick-2.png)
+- Espada divina más rápida y combos extendidos.
+- Lanzas múltiples que caen desde el cielo.
+- Una lluvia de espadas espirituales que caen con retardo.
+- Un ataque de área en el que libera energía dorada mientras ruge.
+
+Esta fase exige buena resistencia, control del timing y movilidad.
 
 ---
 
 ## 💡 Consejos para derrotarlo
 
-- **Mantén la calma en sus combos largos**: muchos jugadores esquivan demasiado pronto.
-- Rodar **hacia la izquierda** suele ser más seguro en fase 1.
-- En fase 2, evita colocarte delante del dragón: busca su costado.
-- Invoca a **Nepheli Loux**, una aliada muy eficaz contra él.
-- Los espíritus con buena resistencia, como los **Soldados Godrick**, pueden distraerlo.
-- Las armas con **sangrado** o **daño eléctrico** funcionan especialmente bien.
+- **El tiempo de sus ataques es engañoso**: espera siempre el último retraso antes de esquivar.
+- Rodar hacia la **derecha** suele evitar la mayoría de combos.
+- Los **escudos grandes** funcionan, pero gastar estamina es peligroso.
+- La **sangre** es muy efectiva (ríos de sangre, naginata, espadas curvas).
+- Evita quedarte lejos: su lluvia de cuchillas es difícil de esquivar a distancia.
+- Puedes invocar a **Melina** si has seguido la historia principal.
+- Espíritus con buena movilidad y daño rápido (como Latenna o las Lágrimas Mímicas) van muy bien.
 
 ---
 
 ## 🏆 Recompensas
 
-Al derrotarlo obtienes:
+Al derrotarlo obtendrás:
 
-- **Runa Mayor de Godrick**, que aumenta todos tus atributos.
-- **Recuerdo del Injertado**, que puede canjearse por:
-  - El hacha de Godrick.
-  - El dragón puño (arma especial).
-- Acceso al siguiente tramo del viaje hacia Liurnia.
+- **Gran Runa de Morgott** (muy útil para builds de vigor y vida máxima).
+- **Recuerdo del Rey de los Augurios**, canjeable por:
+  - La espada de Morgott.
+  - El martillo real imbuidos de luz dorada.
+- Acceso directo al **Árbol Áureo**, avanzando hacia la recta final del juego.
 
 ---
 
 ## 🎨 Apariencia
 
-Godrick es una amalgama de cuerpos. Su torso está lleno de brazos y piernas injertados, algunos útiles, otros simplemente ornamentales. Usa una armadura dorada desgastada y un hacha gigante de diseño irregular.
+Morgott mantiene la silueta delgada y encorvada de Margit, pero con una postura más digna y regia. Lleva un manto púrpura desgastado, coronas improvisadas y cadenas, simbolizando su condición de augurio rechazado.
 
-En su segunda fase, la cabeza de dragón suelta fuego desde su brazo derecho, creando un contraste monstruoso entre carne, metal y llamas.
+Sus armas hechas de luz dorada representan su fidelidad absoluta a la Orden Dorada.
 
 ---
 
-## 📜 Curiosidades
+## ⭐ Curiosidades
 
-- Muchos NPCs lo desprecian, especialmente Kenneth Haight y Nepheli Loux.
-- Su debilidad y crueldad son temas recurrentes: incluso sus propios soldados lo temen.
-- Es uno de los jefes que más claramente representa el concepto de “poder corrupto” del juego.
+- Su voz es la misma que la de Margit, aunque más solemne y menos burlona.
+- Es uno de los pocos semidioses que **no busca poder para sí mismo**, sino proteger el orden.
+- Su lucha está llena de simbolismo: un ser rechazado defendiendo lo que le negó su lugar.
+- Antes de morir, se lamenta por no haber podido proteger el trono, mostrando su lado humano.
 
 ---
 
 ## 📘 Conclusión
 
-Godrick el Injertado es un combate espectacular que combina caos, agresividad y una puesta en escena inolvidable. Vencerlo significa reclamar la primera Runa Mayor y avanzar hacia el corazón mismo de las Tierras Intermedias.
+Morgott, el Rey de los Augurios, es uno de los combates más emocionantes, intensos y narrativamente potentes de *Elden Ring*. Su historia de lealtad, tragedia y rechazo lo convierte en un personaje complejo y memorable.
 
 ---
